Last Commit, Path-length Displayed

--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
       <p id="rb1"> ATMs </p>
       <p id="rb2"> Petrol-Pumps </p>
       <p id="rb3"> Restaurants </p>
+      <input type="text" name="distance" id="rb4">
     </div>
     <div id="map"></div>
     <script src="temp.js"></script>
